--- a/app/app.less
+++ b/app/app.less
@@ -109,6 +109,9 @@ img.keyboard-layout {
 .icon {
   background-image: url(bower_components/material-design-icons/sprites/css-sprite/sprite-hardware-black.png);
 }
+.icon_white{
+  background-image: url(bower_components/material-design-icons/sprites/css-sprite/sprite-action-white.png);
+}
 
 .hint {
   color: darkgray;
@@ -119,4 +122,8 @@ img.keyboard-layout {
 }
 
 .correction-hint {
+}
+
+.lookup-wubi{
+  font-weight:bolder;
 }
